--- a/archives/toutiao-search/2023-10-27.md
+++ b/archives/toutiao-search/2023-10-27.md
@@ -1,58 +1,77 @@
 # 2023-10-27
 
-共 92 条
+共 109 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 27 2023 07:00:53 GMT+0800 (China Standard Time) -->
-1. [小米14正式发布 3999元起](https://so.toutiao.com/search?keyword=小米14正式发布+3999元起)
+<!-- 最后更新时间 Fri Oct 27 2023 08:23:24 GMT+0800 (China Standard Time) -->
+1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
 1. [神十七3名航天员顺利进驻空间站](https://so.toutiao.com/search?keyword=神十七3名航天员顺利进驻空间站)
 1. [新时代中国女性展现崭新“她力量”](https://so.toutiao.com/search?keyword=新时代中国女性展现崭新“她力量”)
+1. [蓝天救援队正陷入史无前例的混乱](https://so.toutiao.com/search?keyword=蓝天救援队正陷入史无前例的混乱)
+1. [小米14正式发布 3999元起](https://so.toutiao.com/search?keyword=小米14正式发布+3999元起)
+1. [李佳琦双十一首日卖出95亿](https://so.toutiao.com/search?keyword=李佳琦双十一首日卖出95亿)
+1. [中国女足赛后没谢场直接回更衣室](https://so.toutiao.com/search?keyword=中国女足赛后没谢场直接回更衣室)
+1. [神十七发射成功汤洪波父亲偷偷拭泪](https://so.toutiao.com/search?keyword=神十七发射成功汤洪波父亲偷偷拭泪)
+1. [反垄断办回应李佳琦是否涉嫌垄断](https://so.toutiao.com/search?keyword=反垄断办回应李佳琦是否涉嫌垄断)
+1. [合肥警方辟谣“高校学生捅人”](https://so.toutiao.com/search?keyword=合肥警方辟谣“高校学生捅人”)
+1. [古特雷斯解释后以色列仍要求其辞职](https://so.toutiao.com/search?keyword=古特雷斯解释后以色列仍要求其辞职)
+1. [拜登称并未要求以色列推迟地面行动](https://so.toutiao.com/search?keyword=拜登称并未要求以色列推迟地面行动)
+1. [知情人：朱迅尼格买提仍在央视工作](https://so.toutiao.com/search?keyword=知情人：朱迅尼格买提仍在央视工作)
+1. [爸爸记录女儿小学到初中的变化](https://so.toutiao.com/search?keyword=爸爸记录女儿小学到初中的变化)
+1. [约翰逊当选美国众议院议长意味什么](https://so.toutiao.com/search?keyword=约翰逊当选美国众议院议长意味什么)
 1. [小米14提前发布是谁给的底气](https://so.toutiao.com/search?keyword=小米14提前发布是谁给的底气)
+1. [英媒：以色列或向哈马斯地道放毒气](https://so.toutiao.com/search?keyword=英媒：以色列或向哈马斯地道放毒气)
+1. [3岁女童被野猴抓走 民警紧急解救](https://so.toutiao.com/search?keyword=3岁女童被野猴抓走+民警紧急解救)
+1. [以色列代表发言时多人起身离开会场](https://so.toutiao.com/search?keyword=以色列代表发言时多人起身离开会场)
+1. [小米手表S3正式发布 售799元起](https://so.toutiao.com/search?keyword=小米手表S3正式发布+售799元起)
+1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
+1. [李佳琦直播间违反《反垄断法》吗](https://so.toutiao.com/search?keyword=李佳琦直播间违反《反垄断法》吗)
+1. [家人到唐胜杰父亲坟前通报飞天喜讯](https://so.toutiao.com/search?keyword=家人到唐胜杰父亲坟前通报飞天喜讯)
+1. [TCL华星：独家供屏小米14系列](https://so.toutiao.com/search?keyword=TCL华星：独家供屏小米14系列)
+1. [巴以冲突已致双方超8300人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超8300人死亡)
+1. [加州州长登长城：这是一部史诗](https://so.toutiao.com/search?keyword=加州州长登长城：这是一部史诗)
+1. [以色列大使馆发文：让被绑架者回家](https://so.toutiao.com/search?keyword=以色列大使馆发文：让被绑架者回家)
+1. [美国海军里根号航母再次进入南海](https://so.toutiao.com/search?keyword=美国海军里根号航母再次进入南海)
+1. [从李佳琦被撕看厨房小家电市场](https://so.toutiao.com/search?keyword=从李佳琦被撕看厨房小家电市场)
+1. [湖北一小学生跳楼身亡 家长发声](https://so.toutiao.com/search?keyword=湖北一小学生跳楼身亡+家长发声)
+1. [美国加州一市议会就巴以问题爆争论](https://so.toutiao.com/search?keyword=美国加州一市议会就巴以问题爆争论)
+1. [律师评大妈收割机工作时捡花生：违法](https://so.toutiao.com/search?keyword=律师评大妈收割机工作时捡花生：违法)
+1. [欧联：利物浦5-1大胜图卢兹](https://so.toutiao.com/search?keyword=欧联：利物浦5-1大胜图卢兹)
+1. [恒大事件普华永道是否应该担责](https://so.toutiao.com/search?keyword=恒大事件普华永道是否应该担责)
+1. [姚明现场观战NBA获全场欢呼](https://so.toutiao.com/search?keyword=姚明现场观战NBA获全场欢呼)
+1. [社保局回应工作人员上班闲聊不叫号](https://so.toutiao.com/search?keyword=社保局回应工作人员上班闲聊不叫号)
+1. [林心如谢娜杨紫在乡村开民宿](https://so.toutiao.com/search?keyword=林心如谢娜杨紫在乡村开民宿)
+1. [太二酸菜鱼被大众点评下架](https://so.toutiao.com/search?keyword=太二酸菜鱼被大众点评下架)
+1. [成都多名出租司机围堵共享电单车](https://so.toutiao.com/search?keyword=成都多名出租司机围堵共享电单车)
+1. [小米龙晶玻璃正式发布](https://so.toutiao.com/search?keyword=小米龙晶玻璃正式发布)
+1. [官方回应职校集体退学：已新招老师](https://so.toutiao.com/search?keyword=官方回应职校集体退学：已新招老师)
+1. [女子带娃拍胸片发现是小孩在操作](https://so.toutiao.com/search?keyword=女子带娃拍胸片发现是小孩在操作)
+1. [苏翊鸣朱易牵手照曝光](https://so.toutiao.com/search?keyword=苏翊鸣朱易牵手照曝光)
+1. [张庭涉传销案撤销原因曝光](https://so.toutiao.com/search?keyword=张庭涉传销案撤销原因曝光)
+1. [小米14性能评测](https://so.toutiao.com/search?keyword=小米14性能评测)
+1. [外交部答中方批准枪支议定书](https://so.toutiao.com/search?keyword=外交部答中方批准枪支议定书)
+1. [男教师涉嫌性侵10岁女童被批捕](https://so.toutiao.com/search?keyword=男教师涉嫌性侵10岁女童被批捕)
+1. [谢娜杨紫林心如组合名“娜紫如”](https://so.toutiao.com/search?keyword=谢娜杨紫林心如组合名“娜紫如”)
+1. [小区炒掉物业给业主发68万红包](https://so.toutiao.com/search?keyword=小区炒掉物业给业主发68万红包)
+1. [此次1万亿国债跟08年4万亿有何不同](https://so.toutiao.com/search?keyword=此次1万亿国债跟08年4万亿有何不同)
 1. [哈马斯代表团在莫斯科访问](https://so.toutiao.com/search?keyword=哈马斯代表团在莫斯科访问)
 1. [中国代表当场回应以色列不满](https://so.toutiao.com/search?keyword=中国代表当场回应以色列不满)
 1. [医生回应患者300挂号费买一句话](https://so.toutiao.com/search?keyword=医生回应患者300挂号费买一句话)
 1. [天津道路两侧布满监控 交警回应](https://so.toutiao.com/search?keyword=天津道路两侧布满监控+交警回应)
-1. [中国女足赛后没谢场直接回更衣室](https://so.toutiao.com/search?keyword=中国女足赛后没谢场直接回更衣室)
-1. [李佳琦双十一首日卖出95亿](https://so.toutiao.com/search?keyword=李佳琦双十一首日卖出95亿)
 1. [网传成都发生街头枪案不实](https://so.toutiao.com/search?keyword=网传成都发生街头枪案不实)
 1. [各方在联合国就巴以问题激烈争吵](https://so.toutiao.com/search?keyword=各方在联合国就巴以问题激烈争吵)
-1. [反垄断办回应李佳琦是否涉嫌垄断](https://so.toutiao.com/search?keyword=反垄断办回应李佳琦是否涉嫌垄断)
-1. [知情人：朱迅尼格买提仍在央视工作](https://so.toutiao.com/search?keyword=知情人：朱迅尼格买提仍在央视工作)
 1. [俄方回应表态引以色列不满](https://so.toutiao.com/search?keyword=俄方回应表态引以色列不满)
-1. [约翰逊当选美国众议院议长意味什么](https://so.toutiao.com/search?keyword=约翰逊当选美国众议院议长意味什么)
-1. [湖北一小学生跳楼身亡 家长发声](https://so.toutiao.com/search?keyword=湖北一小学生跳楼身亡+家长发声)
 1. [媒体：美国或又要全国降半旗了](https://so.toutiao.com/search?keyword=媒体：美国或又要全国降半旗了)
-1. [3岁女童被野猴抓走 民警紧急解救](https://so.toutiao.com/search?keyword=3岁女童被野猴抓走+民警紧急解救)
-1. [蓝天救援队正陷入史无前例的混乱](https://so.toutiao.com/search?keyword=蓝天救援队正陷入史无前例的混乱)
-1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
-1. [以色列代表发言时多人起身离开会场](https://so.toutiao.com/search?keyword=以色列代表发言时多人起身离开会场)
-1. [爸爸记录女儿小学到初中的变化](https://so.toutiao.com/search?keyword=爸爸记录女儿小学到初中的变化)
 1. [拜登巴以政策激怒美国穆斯林群体](https://so.toutiao.com/search?keyword=拜登巴以政策激怒美国穆斯林群体)
-1. [家人到唐胜杰父亲坟前通报飞天喜讯](https://so.toutiao.com/search?keyword=家人到唐胜杰父亲坟前通报飞天喜讯)
-1. [小米14性能评测](https://so.toutiao.com/search?keyword=小米14性能评测)
-1. [美国海军里根号航母再次进入南海](https://so.toutiao.com/search?keyword=美国海军里根号航母再次进入南海)
-1. [男教师涉嫌性侵10岁女童被批捕](https://so.toutiao.com/search?keyword=男教师涉嫌性侵10岁女童被批捕)
-1. [成都多名出租司机围堵共享电单车](https://so.toutiao.com/search?keyword=成都多名出租司机围堵共享电单车)
 1. [小米为什么要自研操作系统](https://so.toutiao.com/search?keyword=小米为什么要自研操作系统)
-1. [从李佳琦被撕看厨房小家电市场](https://so.toutiao.com/search?keyword=从李佳琦被撕看厨房小家电市场)
-1. [恒大事件普华永道是否应该担责](https://so.toutiao.com/search?keyword=恒大事件普华永道是否应该担责)
 1. [小米集团宣布全新战略升级](https://so.toutiao.com/search?keyword=小米集团宣布全新战略升级)
-1. [此次1万亿国债跟08年4万亿有何不同](https://so.toutiao.com/search?keyword=此次1万亿国债跟08年4万亿有何不同)
 1. [福岛核电站5名员工被溅到核污染水](https://so.toutiao.com/search?keyword=福岛核电站5名员工被溅到核污染水)
 1. [中国6名航天员成功会师太空拍照](https://so.toutiao.com/search?keyword=中国6名航天员成功会师太空拍照)
 1. [亚残运田径场再现三面中国国旗升起](https://so.toutiao.com/search?keyword=亚残运田径场再现三面中国国旗升起)
-1. [姚明现场观战NBA获全场欢呼](https://so.toutiao.com/search?keyword=姚明现场观战NBA获全场欢呼)
-1. [以色列大使馆发文：让被绑架者回家](https://so.toutiao.com/search?keyword=以色列大使馆发文：让被绑架者回家)
-1. [苏翊鸣朱易牵手照曝光](https://so.toutiao.com/search?keyword=苏翊鸣朱易牵手照曝光)
-1. [外交部答中方批准枪支议定书](https://so.toutiao.com/search?keyword=外交部答中方批准枪支议定书)
 1. [权志龙曾代表BIGBANG保证不再吸毒](https://so.toutiao.com/search?keyword=权志龙曾代表BIGBANG保证不再吸毒)
-1. [女子带娃拍胸片发现是小孩在操作](https://so.toutiao.com/search?keyword=女子带娃拍胸片发现是小孩在操作)
-1. [律师评大妈收割机工作时捡花生：违法](https://so.toutiao.com/search?keyword=律师评大妈收割机工作时捡花生：违法)
-1. [小区炒掉物业给业主发68万红包](https://so.toutiao.com/search?keyword=小区炒掉物业给业主发68万红包)
 1. [国防部：“以武拒统”死路一条](https://so.toutiao.com/search?keyword=国防部：“以武拒统”死路一条)
 1. [老人倒地被扶起看到有人拍视频怒骂](https://so.toutiao.com/search?keyword=老人倒地被扶起看到有人拍视频怒骂)
 1. [中纪委通报：2人被查3人被处分](https://so.toutiao.com/search?keyword=中纪委通报：2人被查3人被处分)
-1. [官方回应职校集体退学：已新招老师](https://so.toutiao.com/search?keyword=官方回应职校集体退学：已新招老师)
 1. [蛋仔派对回应女孩疑遭客服恐吓诈骗](https://so.toutiao.com/search?keyword=蛋仔派对回应女孩疑遭客服恐吓诈骗)
 1. [保障困难学生群体公平接受教育](https://so.toutiao.com/search?keyword=保障困难学生群体公平接受教育)
 1. [外媒：“美债海啸”正在酝酿](https://so.toutiao.com/search?keyword=外媒：“美债海啸”正在酝酿)
@@ -61,7 +80,6 @@
 1. [媒体：中国限制石墨出口震动美日韩](https://so.toutiao.com/search?keyword=媒体：中国限制石墨出口震动美日韩)
 1. [中国和巴基斯坦将举行海上联合演习](https://so.toutiao.com/search?keyword=中国和巴基斯坦将举行海上联合演习)
 1. [研究称美政府最终或难找到国债买家](https://so.toutiao.com/search?keyword=研究称美政府最终或难找到国债买家)
-1. [李佳琦直播间违反《反垄断法》吗](https://so.toutiao.com/search?keyword=李佳琦直播间违反《反垄断法》吗)
 1. [教育局通报中职730名学生退学](https://so.toutiao.com/search?keyword=教育局通报中职730名学生退学)
 1. [警方通报女子当街杀害男子：已刑拘](https://so.toutiao.com/search?keyword=警方通报女子当街杀害男子：已刑拘)
 1. [媒体关注美国保守派议员当选众议长](https://so.toutiao.com/search?keyword=媒体关注美国保守派议员当选众议长)
@@ -80,7 +98,6 @@
 1. [雷军称小米14越级对标iPhone15Pro](https://so.toutiao.com/search?keyword=雷军称小米14越级对标iPhone15Pro)
 1. [以色列防长与美国防长通电话](https://so.toutiao.com/search?keyword=以色列防长与美国防长通电话)
 1. [拜登已听取缅因州大规模枪击案简报](https://so.toutiao.com/search?keyword=拜登已听取缅因州大规模枪击案简报)
-1. [社保局回应工作人员上班闲聊不叫号](https://so.toutiao.com/search?keyword=社保局回应工作人员上班闲聊不叫号)
 1. [小伙无证醉驾载女友出意外双双身亡](https://so.toutiao.com/search?keyword=小伙无证醉驾载女友出意外双双身亡)
 1. [腾讯：混元大模型中文效果超GPT3.5](https://so.toutiao.com/search?keyword=腾讯：混元大模型中文效果超GPT3.5)
 1. [李大霄：中国股市这边风景独好](https://so.toutiao.com/search?keyword=李大霄：中国股市这边风景独好)
